<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        app:srcCompat="@drawable/logotremp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hi_we_re_tremp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:rowCount="1"
        android:columnCount="2">

        <Button
            android:id="@+id/welcome_frg_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="login"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/welcome_frg_signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:onClick="signUp"
            android:textColor="@color/black" />

    </GridLayout>

</LinearLayout>